# zondel-obs-plugin

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json
.github/scripts/: Build-Windows.ps1  Package-Windows.ps1
.github/workflows/: build-project.yaml  release.yaml
build-aux/: extract-changelog.sh
cmake/macos/: buildspec.cmake
cmake/windows/: buildspec.cmake  helpers.cmake
data/locale/: en-US.ini
docs/: PROTOCOL.md
installer/: installer.iss
src/: downmix.c  downmix.h  pipe-client-unix.inl  pipe-client-win32.inl  pipe-client.c  pipe-client.h  plugin-main.c  resampler.c  resampler.h  ring-buffer.c  ring-buffer.h  zondel-filter.c  zondel-filter.h  zondel-launch.c  zondel-launch.h  zondel-state.c  zondel-state.h
test/: fake-pipe-server.c  test-pipe-client.c  test-resampler.c  test-ring-buffer.c  test-zondel-state.c
